<resources>
    <string name="app_name">Social Media App</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="confirm">Confirm</string>
    <string name="log_out">Log Out</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phone">"Phone Number"</string>
    <string name="birthdate">"Birthdate"</string>
    <string name="age">"Age"</string>
    <string name="profile_picture">"Profile Picture"</string>
</resources>
